@@ -1,5 +1,6 @@
 CHANGELOG
 
+2021-04-13: Fix issue where attributes were not displayed in entry title if {pIqaD} is enabled.
 2021-04-09: Treat epithets as beings capable of language for the purposes of analysis.
 2021-04-07: Add {qolqoS} font.
 2021-03-28: Fixed bug where inhps words displayed wrong message about plural suffix.
